<resources>
    <string name="app_name">智云设备蓝牙检测工具</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="setting">Setting</string>
    <string name="jni">JNI</string>
    <string name="connecting">Connecting …</string>
    <string name="connected">Connected</string>
    <string name="disconnecting">Disconnecting …</string>
    <string name="disconnected">Disconnected</string>
    <string name="show_angle">Show Angle</string>
    <string name="move_to">Move to</string>
    <string name="cancel_move">Cancel move</string>
    <string name="angle">Pitch: %1$.2f, Roll: %2$.2f, Yaw: %3$.2f</string>
    <string name="phone_mode">Phone Mode</string>
    <string name="camera_mode">Camera Mode</string>
    <string name="send_data_set_l_model">Send Data Set L Model</string>
    <string name="send_data_switch_to_horizontal">Send Data Switch To Horizontal</string>
    <string name="send_data_switch_to_vertical">Send Data Switch To Vertical</string>
    <string name="head">Head</string>
    <string name="content">Content</string>
    <string name="crc">CRC</string>
    <string name="enter_head_hint">Enter Head</string>
    <string name="enter_content_hint">Enter the hexadecimal content</string>
    <string name="send_data">Send Data</string>
    <string name="take_photo">take photo</string>
    <string name="check_pass">检测通过</string>
    <string name="move_pitch_forward">move pitch(+)</string>
    <string name="move_roll_forward">move roll(+)</string>
    <string name="move_yaw_forward">move yaw(+)</string>
    <string name="move_pitch_backward">move pitch(-)</string>
    <string name="move_roll_backward">move roll(-)</string>
    <string name="move_yaw_backward">move yaw(-)</string>
</resources>

